[gd_scene load_steps=4 format=3 uid="uid://0swru8iveni8"]

[ext_resource type="Theme" uid="uid://doqiwgxwjf22i" path="res://Themes/Default.tres" id="1_8akp2"]
[ext_resource type="Script" path="res://Scripts/Settings/SettingsPanel.gd" id="1_jx0bc"]

[sub_resource type="Environment" id="Environment_4olqs"]
background_mode = 3
glow_enabled = true
glow_strength = 1.41
glow_blend_mode = 1

[node name="Settings Panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jx0bc")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4olqs")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 632.0
offset_top = 108.0
offset_right = 1330.0
offset_bottom = 258.0
theme = ExtResource("1_8akp2")
theme_override_font_sizes/font_size = 150
text = "Settings"

[node name="Video" type="Button" parent="."]
layout_mode = 0
offset_left = 931.0
offset_top = 788.0
offset_right = 1048.0
offset_bottom = 849.0
theme = ExtResource("1_8akp2")
text = "Video"

[node name="Label" type="Label" parent="Video"]
visible = false
layout_mode = 0
offset_left = -28.0
offset_top = 8.0
offset_right = 12.0
offset_bottom = 49.0
text = ">"

[node name="Label2" type="Label" parent="Video"]
visible = false
layout_mode = 0
offset_left = 117.0
offset_top = 10.0
offset_right = 157.0
offset_bottom = 51.0
text = "<"

[node name="Audio" type="Button" parent="."]
layout_mode = 0
offset_left = 923.0
offset_top = 841.0
offset_right = 1059.0
offset_bottom = 902.0
theme = ExtResource("1_8akp2")
text = "Audio"

[node name="Label" type="Label" parent="Audio"]
visible = false
layout_mode = 0
offset_left = -23.0
offset_top = 9.0
offset_right = 17.0
offset_bottom = 50.0
text = ">"

[node name="Label2" type="Label" parent="Audio"]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 11.0
offset_right = 171.0
offset_bottom = 52.0
text = "<"

[node name="Controls" type="Button" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 895.0
offset_right = 1086.0
offset_bottom = 956.0
theme = ExtResource("1_8akp2")
text = "Controls"

[node name="Label" type="Label" parent="Controls"]
visible = false
layout_mode = 0
offset_left = -31.0
offset_top = 8.0
offset_right = 9.0
offset_bottom = 49.0
text = ">"

[node name="Label2" type="Label" parent="Controls"]
visible = false
layout_mode = 0
offset_left = 194.0
offset_top = 10.0
offset_right = 234.0
offset_bottom = 51.0
text = "<"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 937.0
offset_top = 949.0
offset_right = 1045.0
offset_bottom = 1010.0
theme = ExtResource("1_8akp2")
text = "Back"

[node name="Label" type="Label" parent="Back"]
visible = false
layout_mode = 0
offset_left = -31.0
offset_top = 8.0
offset_right = 9.0
offset_bottom = 49.0
text = ">"

[node name="Label2" type="Label" parent="Back"]
visible = false
layout_mode = 0
offset_left = 111.0
offset_top = 9.0
offset_right = 151.0
offset_bottom = 50.0
text = "<"

[connection signal="mouse_entered" from="Video" to="." method="_on_game_mouse_entered"]
[connection signal="mouse_exited" from="Video" to="." method="_on_game_mouse_exited"]
[connection signal="pressed" from="Video" to="." method="_on_game_pressed"]
[connection signal="mouse_entered" from="Audio" to="." method="_on_audio_mouse_entered"]
[connection signal="mouse_exited" from="Audio" to="." method="_on_audio_mouse_exited"]
[connection signal="pressed" from="Audio" to="." method="_on_audio_pressed"]
[connection signal="mouse_entered" from="Controls" to="." method="_on_controls_mouse_entered"]
[connection signal="mouse_exited" from="Controls" to="." method="_on_controls_mouse_exited"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="mouse_entered" from="Back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
